#114 Modificado las estadisticas del curso

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -295,6 +295,7 @@ interaction.navigationButtons = Interaction -> Navigation buttons
 interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
+label.calendarevents              = # calendar events
 label.categoryitem                = Kategorie / Gegenstand:
 label.close                       = Schlie\u00DFen
 label.component                   = Komponente:
@@ -335,6 +336,7 @@ label.oldPassword                 = Altes Passwort:
 label.parselog                    = Parsing logs...
 label.participants                = Teilnehmer
 label.pass                        = Passwort:
+label.posts                       = # forum posts
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
