--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -371,6 +371,7 @@ interaction.navigationButtons = Interaction -> Navigation buttons
 interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
+label.calendarevents              = # calendar events
 label.categoryitem                = Category/Item:
 label.close                       = Close
 label.component                   = Component: 
@@ -411,6 +412,7 @@ label.oldPassword                 = Old Password:
 label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Password:
+label.posts                       = # forum posts
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
