--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -371,6 +371,7 @@ interaction.navigationButtons = Interacci\u00F3n -> Botones de navegaci\u00F3n
 interaction.tooltipDelay      = Interacci\u00F3n -> Retardo tooltip
 
 label.activities                  = # items de finalizaci\u00F3n de actividad
+label.calendarevents              = # eventos del calendario
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
 label.component                   = Componente: 
@@ -411,6 +412,7 @@ label.oldPassword                 = Contrase\u00F1a antigua:
 label.parselog                    = Parseando los registros...
 label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
+label.posts                       = # mensajes de foros
 label.relogin                     = Fallo al descargar los registros. Intentando iniciar sesion de nuevo y volver a descargar.
 label.restartapplication          = Necesario reiniciar la aplicaci\u00F3n para que los cambios surtan efecto
 label.restoreversion              = Restaurar a versi\u00F3n:
