--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -297,6 +297,7 @@ interaction.navigationButtons = Interaction -> Navigation buttons
 interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
+label.calendarevents              = # calendar events
 label.categoryitem                = Categoria / Item:
 label.close                       = Perto
 label.component                   = Componente:
@@ -337,6 +338,7 @@ label.oldPassword                 = Senha Antiga:
 label.parselog                    = Parsing logs...
 label.participants                = Participantes
 label.pass                        = Senha:
+label.posts                       = # forum posts
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
