--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -297,6 +297,7 @@ interaction.navigationButtons = Interaction -> Navigation buttons
 interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
+label.calendarevents              = # calendar events
 label.categoryitem                = Categoria / article:
 label.close                       = Tanca
 label.component                   = Component:
@@ -337,6 +338,7 @@ label.oldPassword                 = Contrasenya antiga:
 label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Contrasenya:
+label.posts                       = # forum posts
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
 label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
