#113 exportacion e importación de backups locales

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -978,69 +978,70 @@ tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
 
-text.activitycompletion  = Activities completion
-text.all                 = All
-text.author              = Authors:
-text.betweendates        = Between {0} and {1} days
-text.cache               = Lokale Dateien
-text.component           = Component
-text.confirmation        = Confirmation
-text.confirmationtext    = Are you sure to remove the cache of the selected course?
-text.courseconfiguration = Course configuration
-text.coursedata          = Course data
-text.coursemodule        = Course Module
-text.coursename          = Archive course
-text.coursenametextfield = Archived filename
-text.datetime            = Date and time
-text.daydifference       = Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}
-text.days                = Tage
-text.discussioncreation  = Discussions created
-text.empty               = N.A
-text.event               = Event
-text.exportcsv           = Export CSV...
-text.exportcsvdesglosed  = Export breakdown CSV...
-text.exportpng           = Export PNG...
-text.fail                = Fail
-text.favorite            = Als Favorit markiert
-text.filteredusers       = Filtered users
-text.future              = Future
-text.gradeitems          = Grades
-text.hours               = Std
-text.inprogress          = In progress
-text.ip                  = IP Address
-text.lastaccess          = Letzter Zugriff:
-text.lastcourseupdate    = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
-text.license             = License: MIT
-text.logs                = Logs
-text.minutes             = Protokoll
-text.modelversionchanged = Incompatible version of data cache with this new version.\r\n\r\n\r\nIt is necessary to download the data cache again.
-text.moodle              = Moodle: 
-text.never               = noch nie
-text.noActivity          = No activity
-text.nousers             = Kein Zufall
-text.online_false        = Mode: Offline
-text.online_true         = Mode: Online
-text.origin              = Origin
-text.override            = Do you want to overwrite the existing file?
-text.pass                = Pass
-text.past                = Past
-text.previouscache       = Previous courses
-text.recent              = K\u00FCrzlich\r\n
-text.replies             = Post replies
-text.restoredefault      = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
-text.search              = Search
-text.seconds             = Sekunden
-text.section             = Abschnitt
-text.sectionplaceholder  = Titelseite
-text.see                 = See 
-text.selectall           = Select/Deselect all
-text.selectedUsers       = Selected Users
-text.session             = # of sessions: 
-text.stats               = Kursstatistiken
-text.thanks              = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
-text.thankstitle         = Acknowledgments:
-text.total               = Total
-text.wantonlinemode      = Do you want to enter in online mode?
+text.activitycompletion   = Activities completion
+text.all                  = All
+text.author               = Authors:
+text.betweendates         = Between {0} and {1} days
+text.cache                = Lokale Dateien
+text.component            = Component
+text.confirmation         = Confirmation
+text.confirmationtext     = Are you sure to remove the cache of the selected course?
+text.coursecachenotexists = Course cache not exists
+text.courseconfiguration  = Course configuration
+text.coursedata           = Course data
+text.coursemodule         = Course Module
+text.coursename           = Archive course
+text.coursenametextfield  = Archived filename
+text.datetime             = Date and time
+text.daydifference        = Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}
+text.days                 = Tage
+text.discussioncreation   = Discussions created
+text.empty                = N.A
+text.event                = Event
+text.exportcsv            = Export CSV...
+text.exportcsvdesglosed   = Export breakdown CSV...
+text.exportpng            = Export PNG...
+text.fail                 = Fail
+text.favorite             = Als Favorit markiert
+text.filteredusers        = Filtered users
+text.future               = Future
+text.gradeitems           = Grades
+text.hours                = Std
+text.inprogress           = In progress
+text.ip                   = IP Address
+text.lastaccess           = Letzter Zugriff:
+text.lastcourseupdate     = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
+text.license              = License: MIT
+text.logs                 = Logs
+text.minutes              = Protokoll
+text.modelversionchanged  = Incompatible version of data cache with this new version.\r\n\r\n\r\nIt is necessary to download the data cache again.
+text.moodle               = Moodle: 
+text.never                = noch nie
+text.noActivity           = No activity
+text.nousers              = Kein Zufall
+text.online_false         = Mode: Offline
+text.online_true          = Mode: Online
+text.origin               = Origin
+text.override             = Do you want to overwrite the existing file?
+text.pass                 = Pass
+text.past                 = Past
+text.previouscache        = Previous courses
+text.recent               = K\u00FCrzlich\r\n
+text.replies              = Post replies
+text.restoredefault       = Sind Sie sicher, dass Sie die Standardeinstellungen wiederherstellen m\u00F6chten?
+text.search               = Search
+text.seconds              = Sekunden
+text.section              = Abschnitt
+text.sectionplaceholder   = Titelseite
+text.see                  = See 
+text.selectall            = Select/Deselect all
+text.selectedUsers        = Selected Users
+text.session              = # of sessions: 
+text.stats                = Kursstatistiken
+text.thanks               = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
+text.thankstitle          = Acknowledgments:
+text.total                = Total
+text.wantonlinemode       = Do you want to enter in online mode?
 
 thirdInterval = Terz
 
@@ -1049,8 +1050,10 @@ timeInterval = Maximum minute interval
 title.passwordChanged   = Passwort wurde ge\u00E4ndert
 title.passwordIncorrect = Falsches Passwort
 
+tooltip.exportcourse     = Export selected course
 tooltip.groups           = Gruppe
 tooltip.groups.          = Gruppe:
+tooltip.importcourse     = Import course
 tooltip.insecureprotocol = Diese Verbindung ist nicht sicher.\r\nAnmeldeinformationen sind m\u00F6glicherweise kompromittiert.
 tooltip.lastconnection   = Letzter Zugriff:
 tooltip.rol              = Rol
