--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1055,69 +1055,70 @@ tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
 tabs.RISK                = Riesgo de abandono
 
-text.activitycompletion  = Actividades finalizadas
-text.all                 = Todos
-text.author              = Autores:
-text.betweendates        = Entre {0} y {1} d\u00EDas
-text.cache               = Archivos locales
-text.component           = Componente
-text.confirmation        = Confirmaci\u00F3n
-text.confirmationtext    = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
-text.courseconfiguration = Configuraci\u00F3n del curso
-text.coursedata          = Datos del curso
-text.coursemodule        = M\u00F3dulo del curso
-text.coursename          = Archivar curso
-text.coursenametextfield = Nombre de fichero a archivar
-text.datetime            = Fecha y hora
-text.daydifference       = Tiempo transcurrido: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}
-text.days                = d\u00EDas
-text.discussioncreation  = Debates creados
-text.empty               = S.C
-text.event               = Evento
-text.exportcsv           = Exportar CSV...
-text.exportcsvdesglosed  = Exportar CSV desglosado...
-text.exportpng           = Exportar PNG...
-text.fail                = Suspenso
-text.favorite            = Destacados
-text.filteredusers       = Usuarios filtrados
-text.future              = Futuros
-text.gradeitems          = Calificaciones
-text.hours               = horas
-text.inprogress          = En progreso
-text.ip                  = Direcci\u00F3n IP
-text.lastaccess          = \u00DAltimo acceso: 
-text.lastcourseupdate    = Tiempo transcurrido desde la ultima actualizaci\u00F3n: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}\r\n\u00DAltima actualizaci\u00F3n del curso: {2}
-text.license             = Licencia: MIT
-text.logs                = Registros
-text.minutes             = minutos
-text.modelversionchanged = Versi\u00F3n incompatible de cach\u00E9 de datos con esta nueva versi\u00F3n\r\n\r\nEs necesario descargar nuevamente los datos de las asignaturas.
-text.moodle              = Moodle: 
-text.never               = Nunca
-text.noActivity          = Sin actividad
-text.nousers             = No hay coincidencias
-text.online_false        = Modo: Offline
-text.online_true         = Modo: Online
-text.origin              = Origen
-text.override            = \u00BFQuiere sobrescribir el fichero ya existente?
-text.pass                = Aprobado
-text.past                = Pasados
-text.previouscache       = Cursos previos
-text.recent              = Recientes
-text.replies             = Mensajes de r\u00E9plicas
-text.restoredefault      = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
-text.search              = Buscar
-text.seconds             = segundos
-text.section             = Secci\u00F3n
-text.sectionplaceholder  = P\u00E1gina principal
-text.see                 = Ver 
-text.selectall           = Seleccionar/Deseleccionar todos
-text.selectedUsers       = Usuarios seleccionados
-text.session             = N\u00BA de sesiones: 
-text.stats               = Estad\u00EDsticas
-text.thanks              = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
-text.thankstitle         = Agradecimientos:
-text.total               = Total
-text.wantonlinemode      = \u00BFQuieres entrar en modo con conexi\u00F3n?
+text.activitycompletion   = Actividades finalizadas
+text.all                  = Todos
+text.author               = Autores:
+text.betweendates         = Entre {0} y {1} d\u00EDas
+text.cache                = Archivos locales
+text.component            = Componente
+text.confirmation         = Confirmaci\u00F3n
+text.confirmationtext     = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
+text.coursecachenotexists = Cach\u00E9 del curso no existe
+text.courseconfiguration  = Configuraci\u00F3n del curso
+text.coursedata           = Datos del curso
+text.coursemodule         = M\u00F3dulo del curso
+text.coursename           = Archivar curso
+text.coursenametextfield  = Nombre de fichero a archivar
+text.datetime             = Fecha y hora
+text.daydifference        = Tiempo transcurrido: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}
+text.days                 = d\u00EDas
+text.discussioncreation   = Debates creados
+text.empty                = S.C
+text.event                = Evento
+text.exportcsv            = Exportar CSV...
+text.exportcsvdesglosed   = Exportar CSV desglosado...
+text.exportpng            = Exportar PNG...
+text.fail                 = Suspenso
+text.favorite             = Destacados
+text.filteredusers        = Usuarios filtrados
+text.future               = Futuros
+text.gradeitems           = Calificaciones
+text.hours                = horas
+text.inprogress           = En progreso
+text.ip                   = Direcci\u00F3n IP
+text.lastaccess           = \u00DAltimo acceso: 
+text.lastcourseupdate     = Tiempo transcurrido desde la ultima actualizaci\u00F3n: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}\r\n\u00DAltima actualizaci\u00F3n del curso: {2}
+text.license              = Licencia: MIT
+text.logs                 = Registros
+text.minutes              = minutos
+text.modelversionchanged  = Versi\u00F3n incompatible de cach\u00E9 de datos con esta nueva versi\u00F3n\r\n\r\nEs necesario descargar nuevamente los datos de las asignaturas.
+text.moodle               = Moodle: 
+text.never                = Nunca
+text.noActivity           = Sin actividad
+text.nousers              = No hay coincidencias
+text.online_false         = Modo: Offline
+text.online_true          = Modo: Online
+text.origin               = Origen
+text.override             = \u00BFQuiere sobrescribir el fichero ya existente?
+text.pass                 = Aprobado
+text.past                 = Pasados
+text.previouscache        = Cursos previos
+text.recent               = Recientes
+text.replies              = Mensajes de r\u00E9plicas
+text.restoredefault       = \u00BFSeguro que desea restaurar la configuraci\u00F3n predeterminada?
+text.search               = Buscar
+text.seconds              = segundos
+text.section              = Secci\u00F3n
+text.sectionplaceholder   = P\u00E1gina principal
+text.see                  = Ver 
+text.selectall            = Seleccionar/Deseleccionar todos
+text.selectedUsers        = Usuarios seleccionados
+text.session              = N\u00BA de sesiones: 
+text.stats                = Estad\u00EDsticas
+text.thanks               = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
+text.thankstitle          = Agradecimientos:
+text.total                = Total
+text.wantonlinemode       = \u00BFQuieres entrar en modo con conexi\u00F3n?
 
 thirdInterval = Tercer intervalo
 
@@ -1126,8 +1127,10 @@ timeInterval = Intervalo maximo de minutos
 title.passwordChanged   = Contrase\u00F1a modificada
 title.passwordIncorrect = Contrase\u00F1a incorrecta
 
+tooltip.exportcourse     = Exportar curso seleccionado
 tooltip.groups           = Grupo
 tooltip.groups.          = Grupo:
+tooltip.importcourse     = Importar curso
 tooltip.insecureprotocol = Esta conexi\u00F3n no es segura.\nLas credenciales pueden verse comprometidas.
 tooltip.lastconnection   = \u00DAltimo acceso
 tooltip.rol              = Rol
